--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -62,8 +62,35 @@
   <div class="container row " style="margin-top: 10rem;">
     <div class="col-6">
       <img src="/assets/ProductImages/HugoBoss.jpg" style="height: 291px;width:588px; margin-right: 10px;" alt="">
+      <div class="imgtext">
+        <span class="bottom-right">
+
+          <p style="font-size: 12px;font-family: 'Inter';  color:#C1C1C1;font-weight: 600;">
+            Hugo Boss
+          </p>
+          <p style="font-size:26px ; font-family: 'Playfair Display', serif;font-weight: 500;">
+            The Scent
+          </p>
+        </span>
+      </div>
     </div>
     <div class="col-6">
       <img src="/assets/ProductImages/BossInfinite.jpg" style="height: 291px;width:588px;margin-left: 40px;" alt="">
+      <div class="imgtext">
+        <span class="bottom-right1">
+
+          <p style="font-size: 12px;font-family: 'Inter';color:#C1C1C1;font-weight: 600;">
+            Hugo Boss
+          </p>
+          <p style="font-size:26px ; font-family: 'Playfair Display', serif;font-weight: 500;">
+            Infinite
+          </p>
+        </span>
+      </div>
+      <p class="text-muted" style="font-size: 14px;text-align:left;margin-left: 30px;font-weight: 500;">Edition 291</p>
     </div>
   </div>
+
+
+
+  <p appTestDirective> Hey this is new paragraph for testing the new custom directives</p>
