--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
-<div class=" container mt-3 p-5">
+<div class=" container mt-3 ">
   <router-outlet></router-outlet>
 
 </div>
