--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -20,3 +20,28 @@
   height: 300px;
   width:240px;
 }
+.bottom-right {
+  position: absolute;
+  bottom: 83px;
+  width: 200px;
+  height: 75px;
+  right: -11.5px;
+  padding:20px;
+  background-color:white;
+
+}
+.bottom-right1 {
+  position: absolute;
+  bottom: 83px;
+  width: 200px;
+  height: 75px;
+  right: -51.5px;
+  padding:20px;
+  background-color:white;
+
+}
+.imgtext {
+  position: relative;
+  text-align: left;
+  line-height: .5;
+}
